--- a/assets/css/default.scss
+++ b/assets/css/default.scss
@@ -1,4 +1,8 @@
 html {
+  font-family: Calibri, sans-serif;
+  font-family: Calibri, sans-serif;
+  font-size: 20px;
+  font-weight: 600;
   padding: 0;
   margin: 0;
 }
